tests/unit_tests/sema/splice_invalid_expression_01.cc
// RUN: %cxx -verify -fcheck %s

auto v = [:missing_value:]; // expected-error {{invalid splicer expression}}
